Fixing images not showing up - other responsive stuff

--- a/src/components/Card/FocusPopup/FocusPopup.scss
+++ b/src/components/Card/FocusPopup/FocusPopup.scss
@@ -7,7 +7,7 @@
   bottom: 0;
   z-index: 10;
   width: 100%;
-  height: 80vh;
+  height: 85vh;
   background-color: #fff;
   border-radius: 30px 30px 0 0;
 
@@ -38,6 +38,7 @@
     font-size: 15px;
     padding: 5px;
     z-index: 10;
+    margin-bottom: -30px;
     position: sticky;
     top: 0;
     left: 0;
