--- a/src/components/Main/Page/Page.scss
+++ b/src/components/Main/Page/Page.scss
@@ -96,7 +96,7 @@ button {
     }
   }
   .logo {
-    padding: 30px 0;
+    padding: 20px 0;
     img {
       background: #ffe6d2;
       border: 2px dashed #f1d9c6;
